# _coding

./: README.md  checkblocks.sh  cmd.sh  execution_data.json  gnome-terminal-profile.dconf  keyforgit  todolist.txt
Newfolder/: id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
commands/: _cmd.sh  balancecheck.sh  compound2.sh  countNom.sh  gitkeycommitguide  gitkeyguide  keyHandler.sh  optimalCompound.sh  remove_and_run.sh  wipeKeys.sh
compoundcalc2/: Cargo.toml
compoundcalc2/src/: main.rs
datasaves/: calc_saves.json  shares_output.csv
rustbucket/: exporthandlerTest  exporthandlerTest (Partial).rs  exporthandlerTest.rs  nomicexportHandler  nomicexportHandler.rs
rustbucket/blockchecker/: Cargo.toml
rustbucket/blockchecker/src/: main.rs
rustbucket/compoundcalc/: Cargo.toml
rustbucket/compoundcalc/src/: main.rs
rustbucket/language_game/: Cargo.toml
rustbucket/language_game/src/: GermanWordDownloadList  germandictionary.txt  main.rs
rustbucket/nomic_auto_stake/: Cargo.toml  Untitled Document 1  highest_voting_powers.txt
rustbucket/nomic_auto_stake/src/: Untitled Document 1  best_vp_spreads.txt  current_voting_power_spreads.txt  current_vp_spreads.txt  last_save_time.txt  main.rs  voting_power_diffs.txt  weekly_vp_spreads.txt  (+2 more)
rustbucket/pixel_snake/: Cargo.toml
rustbucket/snake_game/: Cargo.toml
rustcomoundcalc/: Cargo.toml
rustcomoundcalc/src/: execution_data.json  main.rs
rustcompoundcalc/: Cargo.toml  execution_data.json
rustcompoundcalc/src/: compoundtimer.rs  display_help.rs  execution_data.json  exporthandlerTest.rs  main.rs
(+4 files in other folders)
