[package]
name = "rustcompoundcalc"
version = "0.1.0"
edition = "2021"


[dependencies]
#ansi_term = "0.12"  # Check for the latest version on crates.io
colored = "2.0"  # Check for the latest version on crates.io
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
csv = "1.1"




[[bin]]
name = "exporthandlerTest"
path = "src/exporthandlerTest.rs"

