[package]
name = "rustcompoundcalc"
version = "0.1.0"
edition = "2021"


[dependencies]
#ansi_term = "0.12"  # Check for the latest version on crates.io
colored = "2.0"  # Check for the latest version on crates.io
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
csv = "1.1"
rodio = "0.13"




[[bin]]
name = "exporthandlerTest"
path = "src/exporthandlerTest.rs"

[[bin]]
name = "compoundtimer"
path = "src/compoundtimer.rs"


#   .try_into().unwrap()
# sudo fuser -v /dev/snd/*
#pulseaudio -k  # Stop PulseAudio
#pulseaudio --start  # Restart PulseAudio
#pulseaudio -k  # Stop PulseAudio pulseaudio --start  # Restart PulseAudio
